# skilly

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  appcast.xml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  skill-request.md
.github/workflows/: deploy-web-cdn.yml  mobile-sdk-artifacts.yml  rust-core-shells.yml
apps/linux-shell/: Cargo.toml
apps/web-backend/: .env.example  .gitignore  FUNNEL_TRACKING_AUDIT.md  PRODUCTION_READINESS.md  README.md  drizzle.config.ts  netlify.toml  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/windows-shell/: Cargo.toml
apps/windows-shell-gui/: Cargo.toml  tauri.conf.json
apps/windows-shell-gui/src/: main.rs
apps/windows-shell/src/: lib.rs  main.rs
core/: README.md
core/domain/: Cargo.toml
core/ffi/: Cargo.toml
core/mobile-sdk/: Cargo.toml  README.md
core/mobile-sdk/src/: lib.rs
core/policy/: Cargo.toml
core/realtime/: Cargo.toml
core/skills/: Cargo.toml
docs/: analytics-tracking-plan.md  privacy-data-inventory.md  security-audit-rvb-launch-2026-04-12.md  security-remediation-rvb-launch-2026-04-13.md  skilly-skill-format-spec.md
docs/analytics/: studio-tracking-plan.md
docs/architecture/: adapter-contracts.md  adr-001-rust-core-native-shells.md  (+17 more)
leanring-buddy/: AGENTS.md  ActiveSkillsSection.swift  AdminAllowlist.swift  AppDetectionMonitor.swift  AppSettings.swift  AssemblyAIStreamingTranscriptionProvider.swift  AuthManager.swift  BYOKSection.swift  BuddyDictationManager.swift  BuddyPushToTalkShortcut.swift  CapReachedModal.swift  ClickyAnalytics.swift  CompanionManager.swift  CompanionPanelView.swift  CompanionResponseOverlay.swift  CurriculumEngine.swift  CurriculumStage.swift  DesignSystem.swift  EntitlementManager.swift  GeminiLiveClient.swift  GeminiLiveSessionManager.swift  GlobalPushToTalkShortcutMonitor.swift  Info.plist  MenuBarPanelManager.swift  OpenAIRealtimeClient.swift  OverlayWindow.swift  PanelBodyView.swift  PanelNavigator.swift  PlanCard.swift  PlanStrip.swift  PromptBudget.swift  RealtimeAudioPlayer.swift  RealtimePricing.swift  RealtimeTelemetry.swift  RustPolicyBridge.swift  RustRealtimeBridge.swift  RustSkillsBridge.swift  SettingsView.swift  SkillDefinition.swift  SkillLibraryView.swift  (+18 more)
leanring-buddy.xcodeproj/: project.pbxproj
leanring-buddyTests/: CurriculumEngineTests.swift  PromptBudgetTests.swift  SkillDefinitionTests.swift  SkillProgressTests.swift  SkillPromptComposerTests.swift  SkillStoreTests.swift  SkillValidationTests.swift
scripts/: README.md  build-web-cdn.sh  create-runtime-validation-report.sh  generate-mobile-sdk-bindings.sh  package-mobile-sdk.sh  package-rust-ffi-dylib.sh  release.sh  validate-mobile-sdk-consumers.sh
sdk/: README.md
skills/: README.md  SPEC.md
worker/: package-lock.json  package.json  wrangler.toml
(+212 files in other folders)
