[workspace]
members = [
    "core/domain",
    "core/policy",
    "core/ffi",
    "core/skills",
    "core/realtime",
    "core/mobile-sdk",
    "apps/windows-shell",
    "apps/linux-shell",
]
# windows-shell-gui pulls Tauri 2 (Windows/CI build deps); excluded from the
# default workspace so `cargo check --workspace` stays buildable on macOS.
exclude = ["apps/windows-shell-gui"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
