[package]
name = "skilly-windows-shell-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Skilly Windows host app (Tauri 2). See docs/architecture/phase-7-windows-shell-prd.md."

[[bin]]
name = "skilly-windows-shell-gui"
path = "src/main.rs"

[dependencies]
skilly-core-domain = { path = "../../core/domain" }
skilly-core-policy = { path = "../../core/policy" }
skilly-core-realtime = { path = "../../core/realtime" }
skilly-core-skills = { path = "../../core/skills" }
skilly-windows-shell = { path = "../windows-shell" }
